# exfiltrieve

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
exfiltrieve/: __main__.py  scan.py
licenses/: linuxprivcheck.license
scripts/: build_aws.sh  run.sh  shell.sh
tests/: Dockerfile.amazonlinux  test_main.py  test_script.py
