[tool.poetry]
name = "exfiltrieve"
version = "0.1.0"
description = ""
authors = ["Robby Reinold <robby@greatexpectations.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
mypy = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
